# simulated_lidar_scanner

./: CMakeLists.txt  README.md  package.xml
config/: sensor_relocator.rviz
include/simulated_lidar_scanner/: lidar_scanner_simulator.h  scene_builder.h
include/simulated_lidar_scanner/synthetic_lidar_scanner/: vtkLidarScanner.h  vtkRay.h
launch/: scanner_relocator.launch  start.launch
src/: lidar_scanner_node.cpp  lidar_scanner_simulator.cpp  scanner_relocator.cpp  scene_builder.cpp
src/synthetic_lidar_scanner/: vtkLidarPoint.cxx  vtkLidarScanner.cxx  vtkRay.cxx
test/: lidar_test.launch  lidar_test.xacro  test_params.yaml  view_object.stl
